# video-chat

./: .gitignore
client/: client.py
client/UI/: threads.py  window.py
server/: CMakeLists.txt  main.cpp
server/src/: database-old.cpp  database.cpp  server.cpp  utils.h
